* Add Normal operation Operation key for invoices with one tax
* Changed type of field property_state to required selection with default value

Version 3.4.4 - 2015-12-21
* Require version 0.16 of retrofix library
* Fix declaration_number and previous_declaration_number computation
* Fix generation of aeat340 file

Version 3.4.3 - 2015-12-18
* Require new version 0.15 of retrofix library

Version 3.4.1 - 2015-12-04
* Fill corrective_invoice_number field if credit note invoce has the original
  invoice as origin
* Change sign of amounts for credit note invoices
* Add relation between AEAT 340 record and invoice lines
* Fix record amount computation and fill equivalence tax fields
* Set AEAT 340 fields to account_es and account_es_pyme tax templates
* Set values to invoice_number, record_number, issued_invoice_count and
  record_count and add suport for operation key B
* Create report lines ordered by issue date
* Don't encode data if it isn't unicode object
* Avoid string values in fiscalyear code

Version 3.4.0 - 2014-11-03

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25
* Initial release